@@ -122,6 +122,26 @@ org.castor.mapping.Loaders=\
                    
             </summary>
             <bugs>
+				<bug id="721" tool="jira">
+                    <description>
+		                Fixed problem with support for final modifier at the class level during source generation.
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Derek Sayeau</name>
+                        <email>erek.sayeau@cognos.com</email>
+                    </reporter>
+                    <type>Bug</type>
+                    <module>XML</module>
+                    <date>20060726</date>
+                </bug>
 				<bug id="786" tool="jira">
                     <description>
 		                Removed unnecessary import statements addition for java.io.* during source generation
