@@ -2,6 +2,11 @@
 Version (SVN)
 -------------
 
+XML:   Fixed bug CASTOR-721 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Fixed problem with support for final modifier at the class level during source generation.
+       Details: http://jira.codehaus.org/browse/CASTOR-721
+       (Werner - 20060726)
+
 XML:   Fixed bug CASTOR-786 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Removed unnecessary import statements addition for java.io.* during source generation
        Details: http://jira.codehaus.org/browse/CASTOR-786
